# person_car_detector

./: .gitattributes  .gitignore  README.md  pyproject.toml
app/: custom_handler.py
app/model_store/: fcos_model.mar
scripts/: launch_torchserve.sh  request.py
