[tool.poetry]
name = 'person_car_detector'
version = "0.1.0"
description = "Person and Car detector dockerized and using torchserve-cpu image"
authors = ["koueen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
torchvision = "^0.18.0"
pillow = "^10.3.0"
torchserve = "^0.11.0"
torch-model-archiver = "^0.11.0"
torch-workflow-archiver = "^0.2.13"
requests = "^2.31.0"
tyro = "^0.8.4"


[tool.poetry.group.style.dependencies]
isort = "^5.12.0"
black = "^23.11.0"